<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/view_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/view_foreground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="40dp"
                >
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    android:background="@color/white2"
                    android:layout_margin="5dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/cost"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Fare_estimate"
                            android:textSize="20dp"
                            android:padding="10dp"
                            android:drawableStart="@drawable/coin"
                            android:drawableLeft="@drawable/coin"
                            android:drawablePadding="5dp"
                            android:layout_margin="5dp"/>
                        <TextView
                            android:id="@+id/promo_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/add_promo_code"
                            android:padding="10dp"
                            android:drawableStart="@drawable/discount"
                            android:drawableLeft="@drawable/discount"
                            android:drawablePadding="5dp"
                            />
                        <Button
                            android:id="@+id/Confirm_Leaving_from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/Confirm_Leaving_from"
                            android:textColor="@color/white2"
                            android:background="@drawable/round_shape2"
                            />

                    </LinearLayout>

                </android.support.v7.widget.CardView>


            </RelativeLayout>

        </FrameLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>